cabal-version:      3.12

-- Newer versions complain
name:               peoplemanager
version:            0.2.0.0
synopsis:           People Manager Game
description:        Game to manage people

-- bug-reports:
license:            AGPL-3.0-only
license-file:       LICENCE
author:             Dan Dart
maintainer:         Dan Dart

-- copyright:
category:           game
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENCE
  README.md

executable peoplemanager
  main-is:            Main.hs
  hs-source-dirs:     src

  -- other-modules:
  -- other-extensions:
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base         ^>=4.21.0.0
    , containers   ^>=0.8
    , fakedata     ^>=1.0.3
    , MonadRandom  ^>=0.6.1
    , text         ^>=2.1.2
    , time         ^>=1.14
    , uuid         ^>=1.3.16

  -- , brick ^>=2.7
  -- , vector ^>=0.13.2.0
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe
