cabal-version:      3.12

-- Newer versions complain
name:               projecteuler
version:            0.2.0.0

-- synopsis:
-- description:
homepage:           https://github.com/danwdart/projects#readme
license:            AGPL-3.0-only

-- license-file:        LICENSE
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
copyright:          2019 Dan Dart
category:           Web
build-type:         Simple
extra-source-files: README.md

common shared-properties
  hs-source-dirs:     src

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:      base >=4.21.0.0 && <4.23.0.0

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe

library
  hs-source-dirs:     lib

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , primes  ^>=0.2.1.0

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe
  exposed-modules:
    Numeric.ProjectEuler.Solution1
    Numeric.ProjectEuler.Solution2
    Numeric.ProjectEuler.Solution3
    Numeric.ProjectEuler.Solution4
    Numeric.ProjectEuler.Solution5
    Numeric.ProjectEuler.Solution6

executable projecteuler
  import:             shared-properties
  build-depends:
    , base          >=4.21.0.0 && <4.23.0.0
    , projecteuler  ^>=0.2.0.0

  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions: UnicodeSyntax

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags

test-suite projecteuler-test
  if (arch(javascript) || arch(wasm32))
    buildable: False

  ghcjs-options:      -dedupe
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:      hspec ^>=2.11.10
  build-tool-depends: hspec-discover:hspec-discover
