cabal-version:       3.0
-- Newer versions complain
name:                reflex-headless
version:             0.1.0.0
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          git@dandart.co.uk
build-type:          Simple
extra-source-files:  CHANGELOG.md

common shared-properties
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.14.1.0 && < 5
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  ghcjs-options:       -dedupe

executable reflex
  import: shared-properties
  main-is:             reflex.hs
  build-depends:       base >=4.14.1.0 && <5, async, reflex

executable minishop
  import: shared-properties
  main-is:             minishop.hs
  build-depends:       base >=4.14.1.0 && <5, ansi-terminal, async, reflex
