cabal-version:      3.4

-- Newer versions complain
name:               reflex-headless
version:            0.2.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk
build-type:         Simple
extra-source-files: CHANGELOG.md

common shared-properties
  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions:
    DerivingStrategies
    UnicodeSyntax

  build-depends:      base ^>=4.20.0.0
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe

executable reflex
  import:        shared-properties
  main-is:       reflex.hs
  build-depends:
    , base    ^>=4.20.0.0
    , reflex  ^>=0.9.3.3

executable minishop
  import:        shared-properties
  main-is:       minishop.hs
  build-depends:
    , ansi-terminal  ^>=1.1.2
    , base           ^>=4.20.0.0
    , reflex         ^>=0.9.3.3
