cabal-version:       >=1.10
name:                reflexstuff
version:             0.1.0.0
license:             AGPL-3.0
author:              Dan Dart
maintainer:          git@dandart.co.uk
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable reflexstuff
  main-is:             Main.hs
  build-depends:       base >=4.12 && <5, reflex-dom, reflex-dom-helpers
  default-language:    Haskell2010
