cabal-version:      3.4
name:               sls2
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Dan Dart
maintainer:         git@dandart.co.uk
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -static

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.16.4.0
                    , aeson
    hs-source-dirs:   lib
    default-language: GHC2021

executable sls2
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
      , aeson
      , sls2
    hs-source-dirs:   src
    default-language: GHC2021

test-suite sls2-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        sls2
