cabal-version:      3.4
name:               sls2
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Dan Dart
maintainer:         git@dandart.co.uk
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -static

library
    import:           warnings
    exposed-modules:  MyHandler
                    , Network.DigitalOcean.CloudFunctions.Handler
                    , Network.DigitalOcean.CloudFunctions.Request
                    , Network.DigitalOcean.CloudFunctions.Response
    build-depends:    base >= 4.17.0.0
                    , aeson
                    , bytestring
                    , containers
                    , text
    hs-source-dirs:   lib
    default-language: GHC2021

executable sls2
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17.0.0
      , aeson
      , bytestring
      , sls2
    hs-source-dirs:   src
    default-language: GHC2021

test-suite sls2-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4.17.0.0,
        bytestring,
        sls2
