cabal-version:       3.0
name:           slsdemo
version:        0.1.0
description:    Please see the README on GitHub at <https://github.com/danwdart/projects#readme>
homepage:       https://github.com/danwdart/projects#readme
bug-reports:    https://github.com/danwdart/projects/issues
author:         Dan Dart
maintainer:     stack@dandart.co.uk
copyright:      2019 Dan Dart
license:        AGPL-3.0-only
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/danwdart/sls

common shared-properties
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
  ghcjs-options:       -dedupe

executable githubpr
  import: shared-properties
  main-is: github-pr.hs
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , containers
    , github
    , lens
    , serverless-haskell
    , text

executable emailme
  import: shared-properties
  main-is: emailme.hs
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , containers
    , lens
    , amazonka-ses
    , serverless-haskell
    , text

executable html
  import: shared-properties
  main-is: index.hs
  hs-source-dirs:
      html
  build-depends:
      base >=4.7 && <5
    , aeson
    , blaze-html
    , blaze-markup
    , bytestring
    , directory
    , fsutils
    , req
    , text
